# auto_researcher

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  mypy.ini  pyproject.toml  recommend.py  run_oos_alpha_validation.py  run_random_universe_validation.py  run_universe_scaling_experiments.py
.github/workflows/: ci.yml  release.yml
.streamlit/: config.toml
scripts/: analyze_10k_tech.py  analyze_earnings_sentiment.py  analyze_edgar_concepts.py  analyze_transcripts.py  async_scraper.py  audit_all_signals.py  audit_dcf_bias.py  audit_estimate_bias.py  backtest_combined_fundamentals.py  backtest_dcf_valuation.py  backtest_dcf_valuation_v2.py  backtest_estimate_revisions.py  backtest_fcf_fixed.py  backtest_fcf_polygon.py  backtest_insider_clusters.py  backtest_news_combined.py  backtest_news_sentiment.py  backtest_news_v2.py  backtest_pead.py  backtest_pead_fixed.py  backtest_tech_signal.py  backtest_topic_sentiment.py  build_earnings_model.py  build_earnings_model_v2.py  calibrate_ic_weights.py  check_db.py  check_fundamentals_coverage.py  check_lower_context.py  check_news.py  check_sec_edgar.py  check_suspicious.py  compare_news.py  cross_company_finbert.py  cross_company_fixed.py  cross_company_sentiment.py  cross_company_sentiment_v2.py  debug_10k.py  debug_earnings.py  debug_merge.py  debug_sec.py  (+46 more)
src/auto_researcher/: __init__.py  config.py  performance_tracker.py  py.typed  ranking_system.py
src/auto_researcher/agents/: __init__.py  backtest_agent.py  deep_research_agent.py  earnings_agent.py  feature_agent.py  finbert_sentiment.py  fundamental_agent.py  insider_trading_agent.py  llm_review_agent.py  model_agent.py  orchestrator.py  research_orchestrator.py  sec_filing_agent.py  sentiment_agent.py  thematic_agent.py
src/auto_researcher/attribution/: __init__.py
src/auto_researcher/audit/: __init__.py
src/auto_researcher/backtest/: __init__.py  enhanced_portfolio.py  evaluation.py  metrics.py  portfolio.py  regime_signal.py  runner.py
src/auto_researcher/cli/: main.py
src/auto_researcher/features/: __init__.py  coverage.py  enhanced.py  feature_pipeline.py  fundamentals.py  sentiment.py  targets.py  technical.py
src/auto_researcher/models/: __init__.py  early_adopter.py  earnings_call_qual.py  earnings_return_model.py  earnings_tech_signal.py  earnings_topic_model.py  emerging_tech.py  factor_rotation.py  filing_tech_signal.py  filing_tone.py  fundamentals_alpha.py  gbdt_model.py  insider_cluster.py  patent_innovation.py  pead_enhanced.py  quality_value.py  regimes.py  sector_momentum.py  sector_rotation_overlay.py  topic_sentiment.py  xgb_ranking_model.py
src/auto_researcher/risk/: __init__.py  drawdown_control.py  exposure_limits.py  position_sizing.py  risk_attribution.py
src/auto_researcher/validation/: __init__.py
tests/: test_backtest_metrics.py  test_backtest_runner.py  test_core_factors.py  test_factor_rotation.py  test_feature_pipeline.py  test_finagg_fundamentals_integration.py  test_fundamentals_csv_integration.py  test_fundamentals_factors.py  test_gbdt_model.py  test_label_shuffle_sanity.py  test_llm_review_agent.py  test_oos_robustness.py  test_oos_suite.py  test_price_loader.py  test_reg_sweep.py  test_regime_switch_strategy.py  test_risk.py  test_sector_rotation_overlay.py  test_spy_benchmark_sanity.py  test_technical_features.py  test_transaction_costs.py  test_transcript_vectorstore.py  test_universe.py
